- GModelSpatialEllipticalGeneralGauss
- GCTAModelSkyCube
- GCTABackground2D
- GCOMBvc
- GCOMBvcs
- GCOMModelDRM
- GCOMModelDRBPhibarBins

The following classes have been removed:
- GCTAExceptionHandler
- GCTAException
- GLATExceptionHandler
- GLATException
- GMWLExceptionHandler
- GMWLException

The following classes have been renamed:
- none

The following methods have been added:
- GApplication::eCO2()
- GApplication::stamp(GFitsHdu&)
- GApplication::stamp(GFits&)
- GApplication::stamp(GFilename&)
- GFitsTableCol::tscale()
- GResponse::convolve(GModelSky&, GObservation&, GMatrixSparse*)
- GResponse::irf_spatial(GModelSky&, GObservation&, GMatrix*)
- GObservation::model(GModels&, GMatrixSparse*)
- GObservation::model_grad(GModel&, GModelPar&)
- GObservation::grad_step_size()
- GGti::reduce(GGti&)
- GTime::leap_seconds()
- GTime::utc2tt()
- GPhases::length()
- GMatrixBase::is_empty()
- angle(GVector&, GVector&)
- GModels::eval(GObservation&, GMatrixSparse*)
- GModel::eval(GObservation&, GMatrixSparse*)
- GModel::associations()
- GModelSky::eval(GObservation&, GMatrixSparse*)
- GModelData::eval(GObservation&, GMatrixSparse*)
- GModelSky::flux(GEnergy&, GEnergy&)
- GModelSky::flux(GSkyRegion&, GEnergy&, GEnergy&)
- GModelSky::eflux(GEnergy&, GEnergy&)
- GModelSky::eflux(GSkyRegion&, GEnergy&, GEnergy&)
- GModelSky::flux_error(GEnergy&, GEnergy&)
- GModelSky::flux_error(GSkyRegion&, GEnergy&, GEnergy&)
- GModelSky::eflux_error(GEnergy&, GEnergy&)
- GModelSky::eflux_error(GSkyRegion&, GEnergy&, GEnergy&)
- GModelSpatialComposite::flux(GSkyRegion&, GEnergy&, GTime&)
- GModelSpatialDiffuseConst::flux(GSkyRegion&, GEnergy&, GTime&)
- GModelSpatialDiffuseCube::flux(GSkyRegion&, GEnergy&, GTime&)
- GModelSpatialDiffuseMap::flux(GSkyRegion&, GEnergy&, GTime&)
- GModelSpatialPointSource::flux(GSkyRegion&, GEnergy&, GTime&)
- GModelSpatialPointSource::coordsys()
- GModelSpatialRadial::is_energy_dependent()
- GModelSpatialRadial::is_time_dependent()