@@ -164,6 +164,7 @@ namespace gammalib {
                                      const double& tol);
     std::string              http_query(const std::string& host,
                                         const std::string& query);
+    std::string              host_country(void);
 }
 
 
