@@ -1,7 +1,7 @@
 /***************************************************************************
  *              GApplication.i - GammaLib application base class           *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2010-2021 by Juergen Knoedlseder                         *
+ *  copyright (C) 2010-2022 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -60,7 +60,7 @@ public:
     // Public methods
     double telapse(void) const;
     double celapse(void) const;
-    double eCO2(void) const;
+    double gCO2e(const std::string& country) const;
     void   logFileOpen(const bool& clobber = true);
     void   logFileClose(void);
 
